--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ include = ["src/**/*", "Cargo.toml"]
 
 [dependencies]
 async-trait = { version = "0.1", default-features = false }
-casbin = { version = "2", default-features = false }
+casbin = { git = "https://github.com/casbin/casbin-rs", default-features = false }
 sea-orm = { version = "0.12", default-features = false, features = ["macros"] }
 
 [dev-dependencies]
